--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ body {
     letter-spacing: 0.03em;
     text-align: center;
     color: #212121;
+    margin-bottom: 50px;
 }
 
 .clients-list {
