--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ body {
     align-items: center;
     border-radius: 50%;
     fill: #AFB1B8;
+    cursor: pointer;
 }
 
 .social-media-list-item:hover {
@@ -454,6 +455,7 @@ body {
     padding-right: 22px;
     border-radius: 4px;
     border: none;
+    cursor: pointer;
 }
 
 .activ-link {
