--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ body {
     /* linear-gradient(to right, rgba(47, 48, 58, 0.4)) */
 }
 
-.button {
+.hero-button {
     font-family: "Roboto";
     background-color: var(--button-color);
     font-size: 16px;
@@ -182,9 +182,39 @@ body {
     cursor: pointer;
 }
 
-.button:active {
+.hero-button:active {
     background: var(--button-color);
     color: #fff;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+}
+
+.backdrop .is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 400px;
+    min-height: 300px;
+    padding: 15px;
+    background-color: skyblue;
+    transform: translate(-50%, -50%);
 }
 
 .ourwork-list {
