--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
     opacity: 1;
 }
 
-.backdrop .is-hidden {
+.is-hidden {
     opacity: 0;
     pointer-events: none;
 }
@@ -215,6 +215,12 @@ body {
     padding: 15px;
     background-color: skyblue;
     transform: translate(-50%, -50%);
+}
+
+.modal .btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .ourwork-list {
