--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,27 @@ body {
     right: 10px;
 }
 
-.ourwork-list {
-    display: flex;
-    justify-content: flex-start;
+.modal-label {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.modal-input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    width: 448px;
+    height: 40px;
+}
+
+.modal-send-button {
+    border-radius: 4px;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #2196f3;
 }
 
 .modal-text {
@@ -236,6 +254,11 @@ body {
     letter-spacing: 0.03em;
     text-align: center;
     color: var(--text-color);
+}
+
+.ourwork-list {
+    display: flex;
+    justify-content: flex-start;
 }
 
 .ourwork–title {
