--- a/css/style.css
+++ b/css/style.css
@@ -229,14 +229,37 @@ body {
 
 .modal-div-username {
     position: relative;
+    outline: 1px dashed blue;
 }
 
 .modal-div-userphone {
     position: relative;
+    outline: 1px dashed yellow;
 }
 
 .modal-div-usermail {
     position: relative;
+    outline: 1px dashed purple;
+}
+
+.modal-svg {
+    position: absolute;
+    top: 31px;
+}
+
+.modal-svg:nth-child(1) {
+    left: 12px;
+    /* top: 1px; */
+}
+
+.modal-svg:nth-child(2) {
+    left: 12px;
+    /* top: 21px; */
+}
+
+.modal-svg:nth-child(3) {
+    left: 12px;
+    /* top: 21px; */
 }
 
 .modal-label {
