--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,9 @@ body {
     width: 30px;
     height: 30px;
     border-radius: 100%;
+    border: none;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
