--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
 }
 
@@ -216,12 +216,14 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 582px;
-    min-height: 581px;
+    width: 582px;
+    height: 581px;
     border-radius: 4px;
     padding: 40px;
     background-color: #fff;
     transform: translate(-50%, -50%);
+    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+
 }
 
 .modal .btn {
@@ -230,17 +232,21 @@ body {
     right: 10px;
 }
 
-.modal-div-username {
+.modal-form-div {
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
-.modal-div-username:focus {
+.modal-form-div:focus {
     fill: var(--button-color);
     cursor: pointer;
 }
 
 .modal-div-userphone {
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .modal-div-userphone:focus {
@@ -250,6 +256,8 @@ body {
 
 .modal-div-usermail {
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .modal-div-usermail:focus {
@@ -287,19 +295,30 @@ body {
 }
 
 .modal-coments {
+    width: 100%;
+    height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 448px;
-    height: 120px;
     margin-bottom: 20px;
+    resize: none;
+    padding: 12px 16px;
+}
+
+.modal-coments::placeholder {
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-input {
+    width: 100%;
+    height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 448px;
-    height: 40px;
     margin-bottom: 10px;
+    padding-left: 42px;
 }
 
 .modal-input:focus {
@@ -372,7 +391,7 @@ body {
 }
 
 .modal-form {
-    width: 448px;
+    width: 100%;
 }
 
 .ourwork-list {
