--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
     align-items: center;
     fill: #AFB1B8;
     transition-property: color, fill;
-    transition-duration: 2000ms;
+    transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -106,6 +106,9 @@ body {
     font-size: 14px;
     letter-spacing: 0.02em;
     color: var(--text-color);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover {
@@ -648,7 +651,9 @@ body {
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
-
+    transition-property: color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list-item:hover {
@@ -680,6 +685,16 @@ body {
     border-radius: 4px;
     border: none;
     cursor: pointer;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolios-button:hover {
+    color: #fff;
+    background-color: var(--button-color);
+    border: none;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25), 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 3px 1px 0 rgba(0, 0, 0, 0.25);
 }
 
 .activ-link {
@@ -737,6 +752,9 @@ body {
     flex-basis: calc((100% - 60px) / 3);
     background: #fff;
     padding-bottom: 20px;
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .works-list-item:hover {
@@ -761,6 +779,9 @@ body {
     letter-spacing: 0.03em;
     color: #fff;
     background: rgba(33, 150, 243, 0.9);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
