--- a/css/style.css
+++ b/css/style.css
@@ -685,7 +685,7 @@ body {
     border-radius: 4px;
     border: none;
     cursor: pointer;
-    transition-property: color;
+    transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
