--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ body {
 .active-link {
     color: var(--button-color);
     position: relative;
-    transition-property: background-color;
+    transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
